Major update, removing GoogleReaderSource, deactivating TwitterSource for now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,3 @@
-S3method("[",WebCorpus)
 S3method(corpus.update,WebCorpus)
 S3method(encloseHTML,PlainTextDocument)
 S3method(eoi,WebHTMLSource)
@@ -16,7 +15,6 @@ S3method(source.update,WebXMLSource)
 export(GoogleBlogSearchSource)
 export(GoogleFinanceSource)
 export(GoogleNewsSource)
-export(GoogleReaderSource)
 export(NYTimesSource)
 export(ReutersNewsSource)
 export(TwitterSource)
@@ -25,7 +23,6 @@ export(WebSource)
 export(YahooFinanceSource)
 export(YahooInplaySource)
 export(YahooNewsSource)
-export(auth.google.reader)
 export(corpus.update)
 export(encloseHTML)
 export(extract)
@@ -39,10 +36,8 @@ export(json_content)
 export(parse)
 export(readGoogle)
 export(readGoogleBlogSearch)
-export(readGoogleReader)
 export(readNYTimes)
 export(readReutersNews)
-export(readTwitter)
 export(readWeb)
 export(readWebHTML)
 export(readWebJSON)
@@ -53,13 +48,20 @@ export(removeNonASCII)
 export(removeTags)
 export(source.update)
 export(trimWhiteSpaces)
+importFrom(RCurl,basicTextGatherer)
 importFrom(RCurl,curlEscape)
 importFrom(RCurl,curlOptions)
+importFrom(RCurl,curlPerform)
+importFrom(RCurl,getCurlHandle)
+importFrom(RCurl,getURI)
+importFrom(RCurl,getURIAsynchronous)
+importFrom(RCurl,multiTextGatherer)
 importFrom(RJSONIO,fromJSON)
 importFrom(XML,addAttributes)
 importFrom(XML,free)
 importFrom(XML,getNodeSet)
 importFrom(XML,htmlTreeParse)
+importFrom(XML,newXMLNamespace)
 importFrom(XML,removeNodes)
 importFrom(XML,toString.XMLNode)
 importFrom(XML,xmlApply)
@@ -67,5 +69,17 @@ importFrom(XML,xmlChildren)
 importFrom(XML,xmlInternalTreeParse)
 importFrom(XML,xmlValue)
 importFrom(XML,xpathSApply)
+importFrom(boilerpipeR,ArticleExtractor)
+importFrom(boilerpipeR,DefaultExtractor)
+importFrom(tm,"Content<-")
+importFrom(tm,"meta<-")
+importFrom(tm,CMetaData)
+importFrom(tm,Content)
+importFrom(tm,Corpus)
+importFrom(tm,FunctionGenerator)
+importFrom(tm,PlainTextDocument)
+importFrom(tm,Source)
 importFrom(tm,eoi)
 importFrom(tm,getElem)
+importFrom(tm,meta)
+importFrom(tm,tm_map)
