--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,4 @@
+S3method("[",WebCorpus)
 S3method(corpus.update,WebCorpus)
 S3method(encloseHTML,PlainTextDocument)
 S3method(eoi,WebHTMLSource)
@@ -17,7 +18,6 @@ export(GoogleFinanceSource)
 export(GoogleNewsSource)
 export(NYTimesSource)
 export(ReutersNewsSource)
-export(TwitterSource)
 export(WebCorpus)
 export(WebSource)
 export(YahooFinanceSource)
@@ -76,10 +76,10 @@ importFrom(tm,"meta<-")
 importFrom(tm,CMetaData)
 importFrom(tm,Content)
 importFrom(tm,Corpus)
+importFrom(tm,DMetaData)
 importFrom(tm,FunctionGenerator)
 importFrom(tm,PlainTextDocument)
 importFrom(tm,Source)
 importFrom(tm,eoi)
 importFrom(tm,getElem)
 importFrom(tm,meta)
-importFrom(tm,tm_map)
