Major update to support tm version 0.6
- make R CMD check happy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,6 @@
 S3method("[",WebCorpus)
 S3method(corpus.update,WebCorpus)
 S3method(encloseHTML,PlainTextDocument)
-S3method(eoi,WebHTMLSource)
-S3method(eoi,WebJSONSource)
-S3method(eoi,WebXMLSource)
 S3method(extract,PlainTextDocument)
 S3method(getElem,WebHTMLSource)
 S3method(getElem,WebJSONSource)
@@ -48,6 +45,10 @@ export(removeNonASCII)
 export(removeTags)
 export(source.update)
 export(trimWhiteSpaces)
+importFrom(NLP,"content<-")
+importFrom(NLP,"meta<-")
+importFrom(NLP,content)
+importFrom(NLP,meta)
 importFrom(RCurl,basicTextGatherer)
 importFrom(RCurl,curlEscape)
 importFrom(RCurl,curlOptions)
@@ -63,6 +64,7 @@ importFrom(XML,getNodeSet)
 importFrom(XML,htmlTreeParse)
 importFrom(XML,newXMLNamespace)
 importFrom(XML,removeNodes)
+importFrom(XML,saveXML)
 importFrom(XML,toString.XMLNode)
 importFrom(XML,xmlApply)
 importFrom(XML,xmlChildren)
@@ -71,15 +73,11 @@ importFrom(XML,xmlValue)
 importFrom(XML,xpathSApply)
 importFrom(boilerpipeR,ArticleExtractor)
 importFrom(boilerpipeR,DefaultExtractor)
-importFrom(tm,"Content<-")
-importFrom(tm,"meta<-")
-importFrom(tm,CMetaData)
-importFrom(tm,Content)
 importFrom(tm,Corpus)
-importFrom(tm,DMetaData)
 importFrom(tm,FunctionGenerator)
 importFrom(tm,PlainTextDocument)
-importFrom(tm,Source)
+importFrom(tm,SimpleSource)
 importFrom(tm,eoi)
 importFrom(tm,getElem)
-importFrom(tm,meta)
+importFrom(tm,reader)
+importFrom(tm,stepNext)
