--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,15 +5,16 @@ Title: Retrieve structured, textual data from various web sources
 Authors@R: c(person("Mario", "Annau", role = c("aut", "cre"),
     email = "mario.annau@gmail.com"))
 Depends:
-    R (>= 2.10)
+    R (>= 3.1.0)
 Imports:
-    tm,
+    NLP (>= 0.1-2),
+    tm (>= 0.6),
     boilerpipeR,
     RCurl,
     XML,
     RJSONIO
 Suggests:
-	testthat
+    testthat
 Description: tm.plugin.webmining facilitates text retrieval from feed
     formats like XML (RSS, ATOM) and JSON. Also direct retrieval from
     HTML is supported. As most (news) feeds only incorporate small
@@ -22,8 +23,3 @@ Description: tm.plugin.webmining facilitates text retrieval from feed
 License: GPL-3
 URL: https://github.com/mannau/tm.plugin.webmining
 BugReports: https://github.com/mannau/tm.plugin.webmining/issues
-
-
-
-
-
