Remove fixed getURL and use RCurl version instead

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,6 @@ export(extractHTMLStrip)
 export(feedquery)
 export(getEmpty)
 export(getLinkContent)
-export(getURL)
 export(json_content)
 export(parse)
 export(readGoogle)
@@ -49,14 +48,9 @@ importFrom(NLP,"content<-")
 importFrom(NLP,"meta<-")
 importFrom(NLP,content)
 importFrom(NLP,meta)
-importFrom(RCurl,basicTextGatherer)
 importFrom(RCurl,curlEscape)
 importFrom(RCurl,curlOptions)
-importFrom(RCurl,curlPerform)
-importFrom(RCurl,getCurlHandle)
-importFrom(RCurl,getURI)
-importFrom(RCurl,getURIAsynchronous)
-importFrom(RCurl,multiTextGatherer)
+importFrom(RCurl,getURL)
 importFrom(RJSONIO,fromJSON)
 importFrom(XML,addAttributes)
 importFrom(XML,free)
