--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,11 @@ language: c
 
 env:
   global:
-    - R_BUILD_ARGS="--no-build-vignettes --no-manual"
-    - R_CHECK_ARGS="--no-build-vignettes --no-manual --as-cran"
+    - R_BUILD_ARGS="--no-manual"
+    - R_CHECK_ARGS="--as-cran"
     - CRAN="http://cran.us.r-project.org"
+    - WARNINGS_ARE_ERRORS=1
+    - BOOTSTRAP_LATEX=1
 
 before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
