--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,11 @@
-# Sample .travis.yml for R projects.
-#
-# See README.md for instructions, or for more configuration options,
-# see the wiki:
-#   https://github.com/craigcitro/r-travis/wiki
+language: r
 
-language: c
+# Be strict when checking our package
+warnings_are_errors: true
+cran: http://cran.us.r-project.org
 
-env:
-  global:
-    - R_BUILD_ARGS="--no-manual"
-    - R_CHECK_ARGS="--as-cran"
-    - CRAN="http://cran.us.r-project.org"
-    - WARNINGS_ARE_ERRORS=1
-    - BOOTSTRAP_LATEX=1
-
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-
-install:
-  - ./travis-tool.sh install_aptget r-cran-rjava
-  - ./travis-tool.sh install_deps
-  - ./travis-tool.sh install_github mannau/boilerpipeR
-
-script: ./travis-tool.sh run_tests
-
-after_failure:
-  - ./travis-tool.sh dump_logs
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
-    
-
+# System dependencies for HTTP calling
+apt_packages:
+ - libcurl4-openssl-dev
+ - libxml2-dev
+ - r-cran-rjava
