--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(readWebHTML)
 export(readWebJSON)
 export(readWebXML)
 export(readYahoo)
+export(readYahooHTML)
 export(readYahooInplay)
 export(removeNonASCII)
 export(removeTags)
