Add Liberation source, Fix examples in doc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(removeNonASCII,PlainTextDocument)
 S3method(source.update,WebXMLSource)
 export(GoogleFinanceSource)
 export(GoogleNewsSource)
+export(LiberationSource)
 export(NYTimesSource)
 export(ReutersNewsSource)
 export(WebCorpus)
@@ -29,6 +30,7 @@ export(getLinkContent)
 export(json_content)
 export(parse)
 export(readGoogle)
+export(readLiberationSource)
 export(readNYTimes)
 export(readReutersNews)
 export(readWeb)
